# pacteon

./: .gitignore  CLAUDE.md  README.md  Vendor Database.xlsx  pyproject.toml
.claude/: settings.json
.obsidian/: graph.json  workspace.json
data/: astm_material_library.json  calibration_reference.json  drawing_standards.json  machines.json  material_prices.json  process_library.json  quotes.jsonl  standards_library.json  vendor_processes.json
docs/: engineering-review.md  system-handoff.md
memory/: MEMORY.md  project_backlog.md  project_context.md
src/pacteon/: __init__.py  batch_runner.py  cli.py  main.py  web.py
src/pacteon/agents/: __init__.py  _specialist_base.py  calibration_agent.py  cutting_specialist.py  drawing_reader.py  eng_doc_specialist.py  eng_info_specialist.py  finishing_specialist.py  foreman.py  forming_specialist.py  machine_worker.py  machining_specialist.py  specialist_dispatcher.py  welding_specialist.py
src/pacteon/models/: __init__.py  drawing.py  machine.py  quote.py
src/pacteon/templates/: index.html
src/pacteon/tools/: __init__.py  cost_calculator.py  pdf_extractor.py  process_calculator.py
tests/: test_cost_calculator.py
