[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pacteon"
version = "0.1.0"
description = "Should-cost calculator for custom manufactured parts — Schneider Packaging / Pacteon"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
pacteon-batch = "pacteon.batch_runner:main"
pacteon = "pacteon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
